--- a/account/templates/account/register_step_2.html
+++ b/account/templates/account/register_step_2.html
@@ -1,7 +1,7 @@
 {% extends "main.html" %}
 {% block content %}
         <div class="container-fluid">
-        <h2 class="section-title position-relative text-uppercase text-center mx-xl-5 mb-4"><span class="bg-secondary pr-3">Validate Code</span></h2>
+        <h2 class="section-title position-relative text-uppercase text-center mx-xl-5 mb-4"><span class="bg-secondary pr-3">Validate Code For Register Or Login</span></h2>
         <div class=" px-xl-5">
             <div class=" mb-5 contact-us" style="">
                 <div class="contact-form bg-light p-30">
