debug info model

--- a/product/templates/product/product_detail.html
+++ b/product/templates/product/product_detail.html
@@ -93,18 +93,13 @@
                             <div class="row">
                                 <div class="col-md-6">
                                     <ul class="list-group list-group-flush">
-                                        <li class="list-group-item px-0">
-                                            Sit erat duo lorem duo ea consetetur, et eirmod takimata.
+
+                                        {% for info in product.informations.all %}
+                                             <li class="list-group-item px-0">
+                                                 {{info}}
                                         </li>
-                                        <li class="list-group-item px-0">
-                                            Amet kasd gubergren sit sanctus et lorem eos sadipscing at.
-                                        </li>
-                                        <li class="list-group-item px-0">
-                                            Duo amet accusam eirmod nonumy stet et et stet eirmod.
-                                        </li>
-                                        <li class="list-group-item px-0">
-                                            Takimata ea clita labore amet ipsum erat justo voluptua. Nonumy.
-                                        </li>
+
+                                       {% endfor %}
                                       </ul>
                                 </div>
                                 <div class="col-md-6">
