--- a/product/templates/product/product_detail.html
+++ b/product/templates/product/product_detail.html
@@ -32,8 +32,8 @@
                         <form>
                             {% for size in product.size.all %}
                                 <div class="custom-control custom-radio custom-control-inline">
-                                <input type="radio" class="custom-control-input" id="size-1" name="size">
-                                <label class="custom-control-label" for="size-1">{{ size }}</label>
+                                <input type="radio" class="custom-control-input" id="{{ color.id }}" name="size">
+                                <label class="custom-control-label" for="{{ color.id }}">{{ size }}</label>
                             </div>
                             {% endfor %}
 
@@ -47,8 +47,8 @@
                         <form>
                           {% for color in product.color.all %}
                                 <div class="custom-control custom-radio custom-control-inline">
-                                <input type="radio" class="custom-control-input" id="color-1" name="color">
-                                <label class="custom-control-label" for="color-1">{{ color }}</label>
+                                <input type="radio" class="custom-control-input" id="{{ color.id }}" name="color">
+                                <label class="custom-control-label" for="{{ color.id }}">{{ color }}</label>
                             </div>
                             {% endfor %}
 
@@ -89,7 +89,7 @@
                         </div>
                         <div class="tab-pane fade" id="tab-pane-2">
                             <h4 class="mb-3">Additional Information</h4>
-                            <p>Eos no lorem eirmod diam diam, eos elitr et gubergren diam sea. Consetetur vero aliquyam invidunt duo dolores et duo sit. Vero diam ea vero et dolore rebum, dolor rebum eirmod consetetur invidunt sed sed et, lorem duo et eos elitr, sadipscing kasd ipsum rebum diam. Dolore diam stet rebum sed tempor kasd eirmod. Takimata kasd ipsum accusam sadipscing, eos dolores sit no ut diam consetetur duo justo est, sit sanctus diam tempor aliquyam eirmod nonumy rebum dolor accusam, ipsum kasd eos consetetur at sit rebum, diam kasd invidunt tempor lorem, ipsum lorem elitr sanctus eirmod takimata dolor ea invidunt.</p>
+{#                            <p>Eos no lorem eirmod diam diam, eos elitr et gubergren diam sea. Consetetur vero aliquyam invidunt duo dolores et duo sit. Vero diam ea vero et dolore rebum, dolor rebum eirmod consetetur invidunt sed sed et, lorem duo et eos elitr, sadipscing kasd ipsum rebum diam. Dolore diam stet rebum sed tempor kasd eirmod. Takimata kasd ipsum accusam sadipscing, eos dolores sit no ut diam consetetur duo justo est, sit sanctus diam tempor aliquyam eirmod nonumy rebum dolor accusam, ipsum kasd eos consetetur at sit rebum, diam kasd invidunt tempor lorem, ipsum lorem elitr sanctus eirmod takimata dolor ea invidunt.</p>#}
                             <div class="row">
                                 <div class="col-md-6">
                                     <ul class="list-group list-group-flush">
@@ -102,22 +102,22 @@
                                        {% endfor %}
                                       </ul>
                                 </div>
-                                <div class="col-md-6">
-                                    <ul class="list-group list-group-flush">
-                                        <li class="list-group-item px-0">
-                                            Sit erat duo lorem duo ea consetetur, et eirmod takimata.
-                                        </li>
-                                        <li class="list-group-item px-0">
-                                            Amet kasd gubergren sit sanctus et lorem eos sadipscing at.
-                                        </li>
-                                        <li class="list-group-item px-0">
-                                            Duo amet accusam eirmod nonumy stet et et stet eirmod.
-                                        </li>
-                                        <li class="list-group-item px-0">
-                                            Takimata ea clita labore amet ipsum erat justo voluptua. Nonumy.
-                                        </li>
-                                      </ul>
-                                </div>
+{#                                <div class="col-md-6">#}
+{#                                    <ul class="list-group list-group-flush">#}
+{#                                        <li class="list-group-item px-0">#}
+{#                                            Sit erat duo lorem duo ea consetetur, et eirmod takimata.#}
+{#                                        </li>#}
+{#                                        <li class="list-group-item px-0">#}
+{#                                            Amet kasd gubergren sit sanctus et lorem eos sadipscing at.#}
+{#                                        </li>#}
+{#                                        <li class="list-group-item px-0">#}
+{#                                            Duo amet accusam eirmod nonumy stet et et stet eirmod.#}
+{#                                        </li>#}
+{#                                        <li class="list-group-item px-0">#}
+{#                                            Takimata ea clita labore amet ipsum erat justo voluptua. Nonumy.#}
+{#                                        </li>#}
+{#                                      </ul>#}
+{#                                </div>#}
                             </div>
                         </div>
                         <div class="tab-pane fade" id="tab-pane-3">
