--- a/product/templates/product/product_detail.html
+++ b/product/templates/product/product_detail.html
@@ -29,7 +29,8 @@
 
                         {% if product.size.exists %}<strong class="text-dark mr-3">Sizes:</strong>{% endif %}
 
-                        <form>
+                        <form method="POST" action="{% url 'add_to_cart' %}">
+                        {% csrf_token %}
                             {% for size in product.size.all %}
                                 <div class="custom-control custom-radio custom-control-inline">
                                 <input type="radio" class="custom-control-input" id="{{ color.id }}" name="size">
@@ -38,13 +39,13 @@
                             {% endfor %}
 
 
-                        </form>
+
                     </div>
                     <div class="d-flex mb-4">
                         {% if product.color.exists %}
                         <strong class="text-dark mr-3">Colors:</strong>
                         {% endif %}
-                        <form>
+
                           {% for color in product.color.all %}
                                 <div class="custom-control custom-radio custom-control-inline">
                                 <input type="radio" class="custom-control-input" id="{{ color.id }}" name="color">
@@ -52,24 +53,25 @@
                             </div>
                             {% endfor %}
 
-                        </form>
+
                     </div>
                     <div class="d-flex align-items-center mb-4 pt-2">
                         <div class="input-group quantity mr-3" style="width: 130px;">
                             <div class="input-group-btn">
-                                <button class="btn btn-primary btn-minus">
+                                <button type= "button" class="btn btn-primary btn-minus">
                                     <i class="fa fa-minus"></i>
                                 </button>
                             </div>
-                            <input type="text" class="form-control bg-secondary border-0 text-center" value="1">
+                            <input type="text"   class="form-control bg-secondary border-0 text-center" value="1">
                             <div class="input-group-btn">
-                                <button class="btn btn-primary btn-plus">
+                                <button class="btn btn-primary btn-plus" type="button">
                                     <i class="fa fa-plus"></i>
                                 </button>
                             </div>
                         </div>
                         <button class="btn btn-primary px-3"><i class="fa fa-shopping-cart mr-1"></i> Add To
                             Cart</button>
+                        </form>
                     </div>
                 </div>
             </div>
