--- a/account/templates/account/add_address.html
+++ b/account/templates/account/add_address.html
@@ -9,7 +9,9 @@
             <div class="">
                 <h5 class="section-title position-relative text-uppercase mb-3"><span class="bg-secondary pr-3">Billing Address</span></h5>
                 <div class="bg-light p-30 mb-5">
+                    <form method="POST">
                     <div class="row">
+                            {% csrf_token %}
                         <div class="col-md-6 form-group">
                             <label>full Name</label>
                                 {{ form.full_name|attr:"class:form-control" }}
@@ -30,9 +32,9 @@
                             <label>Postal Code</label>
                                 {{ form.postall_code|attr:"class:form-control" }}
                         </div>
-
                     </div>
-                </div>
+                         <button type="submit" class="btn btn-primary">Submit</button>
+                                </form>
             </div>
 
         </div>
