--- a/cart/templates/cart/cart_detail.html
+++ b/cart/templates/cart/cart_detail.html
@@ -61,7 +61,7 @@
                             <h5>Total</h5>
                             <h5>{{cart.total}}</h5>
                         </div>
-                        <button class="btn btn-block btn-primary font-weight-bold my-3 py-3">Proceed To Checkout</button>
+                        <a href="{% url "create_order" %}"><button class="btn btn-block btn-primary font-weight-bold my-3 py-3">Proceed To Checkout</button> </a>
                     </div>
                 </div>
             </div>
