--- a/account/templates/account/login.html
+++ b/account/templates/account/login.html
@@ -22,7 +22,7 @@
                            {{ form.password }}
                             <p class="help-block text-danger"></p>
                         </div>
-
+                            <input type="hidden" name="next" value="{{ request.GET.next }}">
                             <button class="btn btn-primary py-2 px-4" type="submit" id="sendMessageButton">
                                 Login
                                 </button>
